[package]
name = "mnemosyne"
version = "0.2.0"
edition = "2021"

[lib]
name = "mnemosyne"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
futures = "0.3"
tokio = { version = "1.29", features = ["rt", "macros", "time"] }
tokio-util = "0.7"
